Revert "Update build.sh"
This reverts commit b76d42bf47940644486b821db361ec3e202dc65f.

This was meant to go into the 1.17 branch for testing