@@ -6,4 +6,4 @@ rm -rf BuildTools.jar
 wget https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar -O BuildTools.jar
 
 export MAVEN_OPTS="-Xmx2G"
-java -XX:+UnlockExperimentalVMOptions -Xmx2G -jar BuildTools.jar "$@"
+java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Xmx2G -jar BuildTools.jar "$@"
